src/test/success/function_no_return.egern
func noReturn(a: int) {
    print(a)
}
noReturn(2)
