src/test/fail/return_value_from_void_fail.egern
func square(n: int) {
    return n * n
}

square(4)
